# python-study

./: .editorconfig  .gitignore  LICENSE  README.md
bilibili_ctf/: README.md  first.py
checkio/: most-wanted-letter.py
crawling-samples/: meizitu.py  smtmm.py
empireofcode/: README.md  digits_multiplication.py  letter_queue.py  roman_numbers.py  speech_module.py
enjoybeautiful/: README.md  scrapy.cfg
flask-sample/: .gitignore
funny-toy/: README.md
introducing-python-answers/: .gitignore  chapter10.py  zoo.py  (+6 more)
python-sample/: README.md  pyproject.toml
python-sample/basic/: break.py  comment.py  exception.py  for.py  function.py  hello_world.py  if.py  match.py  multiplication_table.py  rolling_dice.py  string.py  type.py  while.py
python-sample/collection/: annotation.py  dict.py  list.py  range.py  set.py  slice.py  tuple.py
python-sample/concurrent/: async.py  subprocess_usage.py  task.py  timeout.py
python-sample/data/: json_usage.py  pickle_usage.py  shelve_usage.py  sqlite.py
python-sample/io/: file.py  format.py  get_desktop_location.py  input.py  pathlib_usage.py  shutil_usage.py  tempfile_usage.py
python-sample/math/: decimal_usage.py  fraction_usage.py  math_usage.py  random_usage.py  statistics_usage.py  three_door_question.py
python-sample/oop/: generator.py  inheritance.py  iterable.py  oop.py
python-sample/std/: argparse_usage.py  base64_usage.py  configparser_usage.py  date.py  logger.py  os_usage.py  platform_usage.py  regex.py  system.py  zlib_usage.py
python-sample/web/: smtp_email.py  socket_demo.py  urllib_usage.py
python-samples/packaging-sample/: LICENSE  README.md  pyproject.toml
python-samples/packaging-sample/packaging_sample/: packaging_sample.py
python-samples/packaging-sample/packaging_sample/static/: index.html
python-samples/packaging-sample/tests/: test_packaging_sample.py
python-samples/packaging-sample/yitian_first_package/: simple.py  tests.py
python-samples/packaging-sample/yitian_first_package/static/: index.html
python-samples/python-sample/: README.md  pyproject.toml
python-samples/python-sample/basic/: controllflow.py  datatype.py  exception_handling.py  hello.py  standard_library.py
python-samples/python-sample/data/: accessdb.py  sqlite.py
python-samples/python-sample/misc/: faker_sample.py
python-samples/python-sample/other/: pendulum_sample.py  regex.py
python-samples/python-sample/web/: good_requests.py  request_with_proxy.py
thirdparty-libraries/: README.md  pyproject.toml
thirdparty-libraries/crawler/: README.md  awesome_dotnet.py  beautiful_soup.py  get_bilibili_cover_image.py  list_csdn_blogs.py  meizitu.py  smtmm.py
thirdparty-libraries/data/: fake_data.py  microsoft_access.py  microsoft_excel.py  mongo.py  mysql.py  postgresql.py
thirdparty-libraries/misc/: pendulum_demo.py
thirdparty-libraries/rxpy/: debounce.py  opterator.py  scheduler.py  subject.py
thirdparty-libraries/web/: requests_demo.py
(+102 files in other folders)
