[project]
name = "python-sample"
version = "1.0"
description = "my python sample"
authors = [
    {name = "techstay", email = "lovery521@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "bandit>=1.7.5",
    "flake8>=6.0.0",
    "ipykernel>=6.24.0",
]
