[tool.poetry]
authors = ["techstay <lovery521@gmail.com>"]
classifiers = [
  "Environment :: Console",
]
description = "使用poetry的简单打包项目"
homepage = "https://github.com/techstay/python-study/tree/master/python-samples/packaging-sample"
include = ["LICENSE", 'packaging-sample']
keywords = ["python", "sample"]
license = "MIT"
name = "packaging-sample"
readme = "README.md"
repository = "https://github.com/techstay/python-study/tree/master/python-samples/packaging-sample"
version = "0.1.3"

[tool.poetry.dependencies]
python = "^3.10"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"
pytest = "^5.2"

[tool.poetry.scripts]
yitian-packaging-sample = "packaging_sample.packaging_sample:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
